--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ charset-normalizer==2.0.12
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.0.5
+django-filter==21.1
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
 drf-spectacular==0.22.1
 idna==3.3
 inflection==0.5.1
